<resources>

    <string name="app_name">SMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="operate">操作</string>
    <string name="certain">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="tip">是否删除与该人的全部对话</string>
    <string name="delete_infos">删除与该人的聊天</string>
    <string name="delete_info">删除短信</string>
    <string name="delete_draft">您的草稿已被删除</string>
    <string name="reply">回复</string>
    <string name="send">发送</string>
    <string name="not_null">您的短信内容为空</string>
    <string name="phonenum_not_null">请输入号码</string>
    <string name="have_send">您的短信已发送</string>
    <string name="send_success">您的短信已发送成功</string>
    <string name="send_failure">您的短信发送失败</string>
    <string name="me">我：</string>
    <string name="new_sms">新建</string>
    <string name="sure">确定</string>
    <string name="dial">拨号</string>
    <string name="lastway">上一步</string>
    <string name="sms">短信</string>
    <string name="new_info">新建短信</string>
    <string name="addressee">收信人</string>
    <string name="contact">联系人</string>
    <string name="draft">草稿</string>
    <string name="save_draft">正在保存草稿</string>

</resources>