<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@color/head"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/head_left"
            style="@style/title_left_btn_style"
            android:text="@string/new_info"
            android:visibility="gone" />

        <TextView
            android:id="@+id/head_center"
            style="@style/title_center_btn_style"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/sure"
            style="@style/title_right_btn_style"
            android:text="@string/sure" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/head"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:clickable="true"
            android:dividerHeight="1.5dp" >
        </ListView>
    </LinearLayout>

    <ListView
        android:id="@+id/pinyinListView"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/head"
        android:background="@android:color/darker_gray"
        android:divider="@android:color/transparent" >
    </ListView>

</RelativeLayout>